# rpc-stall-repro

./: .gitignore  Cargo.toml  package.json  runv.sh  setup.sh  test.ts
callee/: Cargo.toml
callee/src/: lib.rs
caller/: Cargo.toml
caller/src/: lib.rs
